feat : added theme  and navbar component

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,19 +4,15 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
       "src": "./assets/notesylogo.png",
       "type": "image/png",
       "sizes": "50x50"
-    },
-    {
-      "src": "./assets/notesylogo.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
+
   ],
   "start_url": ".",
   "display": "standalone",
